# CC3501-RP2040-Labs

./: .gitignore  .gitmodules  CMakeLists.txt
src/: board.h  main.cpp
src/drivers/WS2812/: WS2812.pio
src/drivers/accelerometer/: accelerometer.cpp  accelerometer.h
src/drivers/leds/: colour.cpp  colour.h  led_array.cpp  led_array.h  leds.cpp
src/drivers/logging/: logging.cpp  logging.h
src/drivers/microphone/: microphone.cpp  microphone.h
src/tasks/: accelerometer_task.cpp  accelerometer_task.h  bluetooth_task.cpp  led_task.cpp  led_task.h  microphone_task.cpp  microphone_task.h
tests/logs/fft/: .RData  .Rhistory  fft.R
tests/mocks/: ws2812.cpp  ws2812.pio.h
tests/mocks/hardware/: gpio.cpp  gpio.h  pio.cpp  pio.h
tests/mocks/pico/: stdlib.cpp  stdlib.h  time.cpp  time.h
